fix: quick fix to swagger docs for group-roles routes
